# coven

./: .gitignore  Cargo.toml  Dioxus.toml  Justfile  README.md  package.json  tailwind.config.js
src/: lib.rs  main.rs  service.rs  state.rs  time.rs
src/components/: app_container.rs  app_container.scss  app_nav.rs  app_side_nav.rs  app_top_nav.rs  cabal_channel_list.rs  cabal_container.rs  cabal_container.scss  cabal_nav_list.rs  cabals_nav.rs  channel_posts.rs  channels_nav.rs  mod.rs
src/hooks/: mod.rs
src/pages/: app_home.rs  app_layout.rs  cabal_channel.rs  cabal_home.rs  cabal_layout.rs  mod.rs
src/styles/: theme.scss
