[package]
name = "coven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["tokio1"] }
cable = { git = "https://github.com/cabal-club/cable.rs" }
cable_core = { git = "https://github.com/cabal-club/cable.rs" }
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-router = "0.4.1"
dirs = "5.0.1"
fermi = "0.4.0"
futures-util = "0.3.29"
nest = "1.0.0"
tokio = "1.33.0"
